--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -3,79 +3,29 @@
      "back":"Back"
   },
   "home":{
-     "welcomeMessage":"Welcome to MC Tools!",
+     "welcomeMessage":"Hi there!",
      "description":"This is a collection of powerful tools for Minecraft.",
      "cards":{
-        "advertisement":{
-           "title":"Your Advertisement",
-           "description":"Here could be your advertisement"
+        "ffsettings":{
+           "title":"FF Settings",
+           "description":"Here are sensitivity settings for the game Garena Free Fire for various devices."
         },
-        "byteflipper":{
-           "title":"ByteFlipper",
-           "description":"Official Developer TG Channel"
+        "mcbedrock":{
+           "title":"MCBedrock",
+           "description":"Here you will find the latest news as well as changelogs for Minecraft."
         },
         "strongholdFinder":{
-           "title":"Stronghold Finder with Throw Angle",
-           "description":"Find the stronghold location using the throw angle of the Ender Pearl"
+           "title":"Portal Seeker App",
+           "description":"Here you can easily find the stronghold portal using your coordinates and throwing angle."
         },
-        "serverStatus":{
-           "title":"Minecraft Server Status",
-           "description":"Quickly retrieve the status of any Minecraft server"
+        "mcids":{
+           "title":"MC IDs App",
+           "description":"Here you can easily find block IDs, items, particles, etc. from Minecraft."
         },
         "donate":{
          "title":"Donate",
          "description":"Donate"
       }
      }
-  },
-  "serverStatusPage":{
-     "welcomeMessage":"Minecraft Server Status",
-     "description":"Quickly retrieve the status of any Minecraft server.",
-     "enterHostAdres":"Enter host address",
-     "checkStatus":"Check Status",
-     "serverStatus":"Server Status",
-     "status":"Status",
-     "online":"Online",
-     "offline":"Offline",
-     "host":"Host",
-     "ipAddress":"IP / Port",
-     "icon":"Icon",
-     "motd":"MOTD",
-     "version":"Version",
-     "players":"Players",
-     "togglePlayers":"Toggle Player List",
-     "mods":"Mods",
-     "toggleMods":"Toggle Mods List",
-     "plugins":"Plugins",
-     "togglePlugins":"Toggle Plugins List",
-     "eulaBlocked":"EULA Blocked",
-     "protocolVersion":"Protocol Version",
-     "software":"Software",
-     "srvRecord":"SVR Record",
-     "notAvailable":"N/A",
-     "number":"#",
-     "username":"Username",
-     "uuid":"UUID",
-     "name":"Name",
-     "versionShort":"Version"
-  },
-  "strongholdFinderPage": {
-   "title": "Stronghold Finder",
-   "description": "Enter the coordinates and angle of the Ender Pearl throw for two locations to find the stronghold.",
-   "firstLocation": "First Location",
-   "secondLocation": "Second Location",
-   "xCoordinate": "X Coordinate",
-   "zCoordinate": "Z Coordinate",
-   "angleOfTheThrow": "Angle of the Throw",
-   "enterXCoordinate": "Enter X coordinate",
-   "enterZCoordinate": "Enter Z coordinate",
-   "enterAngleInDegrees": "Enter angle in degrees",
-   "findStronghold": "Find Stronghold",
-   "goBack": "Go Back",
-   "estimatedStrongholdLocation": "Estimated Stronghold Location",
-   "x": "X:",
-   "z": "Z:",
-   "anglesCannotBeEqual": "Angles cannot be equal!",
-   "anglesCannotBeOpposite": "Angles cannot be opposite!"
- }
+  }
 }
