--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1,75 +1,111 @@
 {
-  "ui":{
-     "back":"Назад"
-  },
-  "home":{
-     "welcomeMessage":"Добро пожаловать в MC Tools!",
-     "description":"Это коллекция мощных инструментов для Minecraft.",
-     "cards":{
-      "ffsettings":{
-         "title":"FF Settings",
-         "description": "Здесь вы найдете настройки чувствительности для игры Garena Free Fire для различных устройств."
-      },
-      "mcbedrock":{
-         "title":"MCBedrock",
-         "description": "Здесь вы найдете последние новости, а также списки изменений для Minecraft."
-      },
-      "strongholdFinder":{
-         "title":"Portal Seeker App",
-         "description": "Здесь вы можете легко найти портал к крепости, используя ваши координаты и угол броска."
-      },
-      "mcids":{
-         "title":"MC IDs App",
-         "description": "Здесь вы можете легко найти идентификаторы блоков, предметов, частиц и т.д. из Minecraft."
-      },
-        "donate":{
-         "title":"Donate",
-         "description":"Donate"
-      }
+   "animatedTexts": [
+      "iBa",
+      "Ibragim",
+      "Ibrahim",
+      "Ibraim",
+      "Abraham",
+      "Abram",
+      "Avraham",
+      "Brahim",
+      "Ibraheem",
+      "Ibrahima",
+      "Ebrahim",
+      "Muslim",
+      "Deni",
+      "Andrey"
+    ],
+    "iam": "Я",
+   "menu": {
+     "home": "Главная",
+     "aboutMe": "Обо мне",
+     "contactMe": "Контакты"
+   },
+   "home": {
+     "welcomeMessage": "Привет!",
+     "description": "Мы вкладываем душу в проекты, которые создаём для вас ❤️<br>На этом сайте вы найдете наши приложения и разработки, выполненные с заботой и вниманием. Мы надеемся, что наша работа будет вам полезна.",
+     "ourAndroidApps": "Наши Android приложения",
+     "cards": {
+       "ffsettings": {
+         "title": "FF Settings",
+         "description": "Здесь представлены настройки чувствительности для игры Garena Free Fire для различных устройств."
+       },
+       "mcbedrock": {
+         "title": "MCBedrock",
+         "description": "Здесь вы найдете последние новости, а также журналы изменений для Minecraft."
+       },
+       "strongholdFinder": {
+         "title": "Приложение Portal Seeker",
+         "description": "Здесь вы можете легко найти портал крепости, используя ваши координаты и угол броска."
+       },
+       "mcids": {
+         "title": "Приложение MC IDs",
+         "description": "Здесь вы можете легко найти ID блоков, предметов, частиц и т. д. из Minecraft."
+       },
+       "donate": {
+         "title": "Пожертвовать",
+         "description": "Пожертвовать"
+       }
      }
-  },
-  "serverStatusPage":{
-     "welcomeMessage":"Статус сервера Minecraft",
-     "description":"Быстро получить статус любого сервера Minecraft.",
-     "enterHostAdres":"Напишите адрес хоста",
-     "checkStatus":"Проверить статус",
-     "serverStatus":"Статус сервера",
-     "status":"Статус",
-     "online":"Онлайн",
-     "offline":"Оффлайн",
-     "host":"Хост",
-     "ipAddress":"IP / Порт",
-     "icon":"Иконка",
-     "motd":"MOTD",
-     "version":"Версия",
-     "players":"Игроки",
-     "togglePlayers":"Показать/скрыть список игроков",
-     "mods":"Моды",
-     "toggleMods":"Показать/скрыть список модов",
-     "plugins":"Плагины",
-     "togglePlugins":"Показать/скрыть список плагинов",
-     "eulaBlocked":"EULA заблокировано",
-     "protocolVersion":"Версия протокола",
-     "software":"Программное обеспечение",
-     "srvRecord":"SVR запись"
-  },
-  "strongholdFinderPage": {
-   "title": "Поиск крепости",
-   "description": "Введите координаты и угол броска Жемчужины Края для двух локаций, чтобы найти крепость.",
-   "firstLocation": "Первая локация",
-   "secondLocation": "Вторая локация",
-   "xCoordinate": "Координата X",
-   "zCoordinate": "Координата Z",
-   "angleOfTheThrow": "Угол броска",
-   "enterXCoordinate": "Введите координату X",
-   "enterZCoordinate": "Введите координату Z",
-   "enterAngleInDegrees": "Введите угол в градусах",
-   "findStronghold": "Найти крепость",
-   "goBack": "Назад",
-   "estimatedStrongholdLocation": "Предполагаемое местоположение крепости",
-   "x": "X:",
-   "z": "Z:",
-   "anglesCannotBeEqual": "Углы не могут быть равны!",
-   "anglesCannotBeOpposite": "Углы не могут быть противоположными!"
- }
-}
+   },
+   "ffsettings": {
+     "about": "",
+     "features": "Функции",
+     "screenshots": "Скриншоты",
+     "description": "Здесь представлены настройки чувствительности для игры Garena Free Fire для различных устройств.",
+     "featues": {
+       "cloudTechnology": {
+         "title": "Облачные технологии",
+         "description": "Новые настройки чувствительности появляются без необходимости обновления приложения"
+       },
+       "multilingualSupport": {
+         "title": "Многоязычная поддержка",
+         "description": "Поддерживаются разные языки, и добавляются новые"
+       },
+       "manyBrands": {
+         "title": "Множество брендов",
+         "description": "Поддержка устройств более чем от 12 различных производителей"
+       },
+       "minimalistUI": {
+         "title": "Минималистичный интерфейс",
+         "description": "Самообъясняющийся интерфейс без перегруженных меню"
+       }
+     }
+   },
+   "aboutMe": {
+     "description": "Я разработчик Android, который недавно начал работать в веб-разработке. Я родом из Чечни, Россия, но в данный момент проживаю в Белой Подляске, Польша. Я переехал в Польшу в 2017 году и до сих пор живу здесь, но планирую переезд в Москву или Санкт-Петербург в будущем.<br><br>В настоящее время я активно изучаю веб-разработку. Я также являюсь членом сообщества JVMFrog Live и владельцем проекта ByteFlipper.<br><br>Открытый исходный код — моя страсть, и уже более двух лет я вношу свой вклад в развитие проектов с открытым исходным кодом, публикуя свои приложения с открытым исходным кодом. Помимо технологий, меня интересует лингвистика, и в данный момент я активно изучаю английский язык. Я также увлекаюсь фотографией, дизайном пользовательского интерфейса и даже рисованием. Музыка — моя страсть, и мой день не проходит без хорошей музыки.",
+     "skills": "Навыки",
+     "skillsCards": {
+       "skill1": {
+         "title": "Разработка Android",
+         "description": "Java, Kotlin"
+       },
+       "skill2": {
+         "title": "Веб-разработка",
+         "description": "Vue3 + DaisyUI"
+       },
+       "skill3": {
+         "title": "Системы контроля версий",
+         "description": "Git, GitHub"
+       },
+       "skill4": {
+         "title": "Дизайн веб/приложений",
+         "description": "Прототипирование и UI/UX-дизайн"
+       }
+     }
+   },
+   "contactMe": {
+     "socialNetwork": "Мои социальные сети",
+     "form": {
+       "title": "Свяжитесь со мной",
+       "yourname": "Ваше имя",
+       "enteryourname": "Введите ваше имя",
+       "youremail": "Ваш email",
+       "enteryouremail": "Введите ваш email",
+       "message": "Сообщение",
+       "enteryourmessage": "Введите ваше сообщение",
+       "submit": "Отправить",
+       "sending": "Отправка..."
+     }
+   }
+ } 
