--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -25,6 +25,7 @@
      "welcomeMessage":"Привет!",
      "description":"Мы вкладываем душу в проекты, которые создаём для вас ❤️<br>На этом сайте вы найдете наши приложения и разработки, выполненные с заботой и вниманием. Мы надеемся, что наша работа будет вам полезна.",
      "ourAndroidApps":"Наши Android приложения",
+     "authorsMusic": "Музыка Автора",
      "cards":{
         "ffsettings":{
            "title":"FF Settings",
