--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -25,6 +25,7 @@
        "welcomeMessage":"Привіт!",
        "description":"Ми вкладаємо серце в проекти, які створюємо для вас ❤️<br>На цьому сайті ви знайдете наші додатки та розробки, виконані з турботою та увагою. Ми сподіваємося, що наша робота буде для вас корисною.",
        "ourAndroidApps":"Наші додатки для Android",
+       "authorsMusic": "Музика Автора",
        "cards":{
           "ffsettings":{
              "title":"Налаштування FF",
