Added page for: EverBook

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1,112 +1,140 @@
 {
-  "animatedTexts":[
-     "iBa",
-     "Ibragim",
-     "Ibrahim",
-     "Ibraim",
-     "Abraham",
-     "Abram",
-     "Avraham",
-     "Brahim",
-     "Ibraheem",
-     "Ibrahima",
-     "Ebrahim",
-     "Muslim",
-     "Deni",
-     "Andrey"
-  ],
-  "iam":"Я",
-  "menu":{
-     "home":"Главная",
-     "aboutMe":"Обо мне",
-     "contactMe":"Контакты"
-  },
-  "home":{
-     "welcomeMessage":"Привет!",
-     "description":"Мы вкладываем душу в проекты, которые создаём для вас ❤️<br>На этом сайте вы найдете наши приложения и разработки, выполненные с заботой и вниманием. Мы надеемся, что наша работа будет вам полезна.",
-     "ourAndroidApps":"Наши Android приложения",
-     "authorsMusic": "Музыка Автора",
-     "cards":{
-        "ffsettings":{
-           "title":"FF Settings",
-           "description":"Здесь представлены настройки чувствительности для игры Garena Free Fire для различных устройств."
+   "animatedTexts":[
+      "iBa",
+      "Ibragim",
+      "Ibrahim",
+      "Ibraim",
+      "Abraham",
+      "Abram",
+      "Avraham",
+      "Brahim",
+      "Ibraheem",
+      "Ibrahima",
+      "Ebrahim",
+      "Muslim",
+      "Deni",
+      "Andrey"
+   ],
+   "iam":"Я",
+   "menu":{
+      "home":"Главная",
+      "aboutMe":"Обо мне",
+      "contactMe":"Контакты"
+   },
+   "home":{
+      "welcomeMessage":"Привет!",
+      "description":"Мы вкладываем душу в проекты, которые создаём для вас ❤️<br>На этом сайте вы найдете наши приложения и разработки, выполненные с заботой и вниманием. Мы надеемся, что наша работа будет вам полезна.",
+      "ourAndroidApps":"Наши Android приложения",
+      "authorsMusic":"Музыка Автора",
+      "cards":{
+         "ffsettings":{
+            "title":"FF Settings",
+            "description":"Здесь представлены настройки чувствительности для игры Garena Free Fire для различных устройств."
+         },
+         "mcbedrock":{
+            "title":"MCBedrock",
+            "description":"Здесь вы найдете последние новости, а также журналы изменений для Minecraft."
+         },
+         "strongholdFinder":{
+            "title":"Portal Seeker App",
+            "description":"Здесь вы можете легко найти портал крепости, используя ваши координаты и угол броска."
+         },
+         "mcids":{
+            "title":"MC IDs App",
+            "description":"Здесь вы можете легко найти ID блоков, предметов, частиц и т. д. из Minecraft."
+         },
+         "donate":{
+            "title":"Пожертвовать",
+            "description":"Пожертвовать"
+         }
+      }
+   },
+   "ffsettings":{
+      "about":"",
+      "features":"Функции",
+      "screenshots":"Скриншоты",
+      "description":"Здесь представлены настройки чувствительности для игры Garena Free Fire для различных устройств.",
+      "featues":{
+         "cloudTechnology":{
+            "title":"Облачные технологии",
+            "description":"Новые настройки чувствительности появляются без необходимости обновления приложения"
+         },
+         "multilingualSupport":{
+            "title":"Многоязычная поддержка",
+            "description":"Поддерживаются разные языки, и добавляются новые"
+         },
+         "manyBrands":{
+            "title":"Множество брендов",
+            "description":"Поддержка устройств более чем от 12 различных производителей"
+         },
+         "minimalistUI":{
+            "title":"Минималистичный интерфейс",
+            "description":"Самообъясняющийся интерфейс без перегруженных меню"
+         }
+      }
+   },
+   "everbook":{
+      "about":"",
+      "features":"Функции",
+      "screenshots":"Скриншоты",
+      "description":"Это удобное приложение для чтения книг, которое позволяет пользователям наслаждаться любимыми произведениями в любое время и в любом месте. Просто загрузите свои книги в приложение и читайте их в комфортной, интуитивно понятной читалке. Приложение автоматически запоминает, где вы остановились, и при следующем входе открывает книгу на том же месте. Поддерживаются различные форматы файлов, а также настройки шрифтов и цветовых тем для вашего удобства.",
+      "featues":{
+         "supportedFileFormats":{
+            "title":"Поддержка 8 форматов файлов",
+            "description": "Поддерживаются 8 различных форматов файлов, включая: .pdf, .txt, .epub, .fb2, .zip, .html, .htm и .md"  
+         },
+         "customization":{
+            "title":"Полная кастомизация читалки",
+            "description": "Доступна возможность кастомизации читалки: от размера текста и выбора шрифта до настройки цветов букв и фона"  
+         },
+         "themes":{
+            "title":"10 уникальных тем",
+            "description": "На выбор представлено 10 цветовых вариаций тем, включая AMOLED и контрастные варианты"  
+         },
+         "multilingualSupport": {
+            "title": "Многоязычная поддержка",
+            "description": "Поддерживаются разные языки, новые добавляются регулярно"
         },
-        "mcbedrock":{
-           "title":"MCBedrock",
-           "description":"Здесь вы найдете последние новости, а также журналы изменений для Minecraft."
-        },
-        "strongholdFinder":{
-           "title":"Portal Seeker App",
-           "description":"Здесь вы можете легко найти портал крепости, используя ваши координаты и угол броска."
-        },
-        "mcids":{
-           "title":"MC IDs App",
-           "description":"Здесь вы можете легко найти ID блоков, предметов, частиц и т. д. из Minecraft."
-        },
-        "donate":{
-           "title":"Пожертвовать",
-           "description":"Пожертвовать"
-        }
-     }
-  },
-  "ffsettings":{
-     "about":"",
-     "features":"Функции",
-     "screenshots":"Скриншоты",
-     "description":"Здесь представлены настройки чувствительности для игры Garena Free Fire для различных устройств.",
-     "featues":{
-        "cloudTechnology":{
-           "title":"Облачные технологии",
-           "description":"Новые настройки чувствительности появляются без необходимости обновления приложения"
-        },
-        "multilingualSupport":{
-           "title":"Многоязычная поддержка",
-           "description":"Поддерживаются разные языки, и добавляются новые"
-        },
-        "manyBrands":{
-           "title":"Множество брендов",
-           "description":"Поддержка устройств более чем от 12 различных производителей"
-        },
-        "minimalistUI":{
-           "title":"Минималистичный интерфейс",
-           "description":"Самообъясняющийся интерфейс без перегруженных меню"
-        }
-     }
-  },
-  "aboutMe":{
-     "description":"Я разработчик Android, который недавно начал работать в веб-разработке. Я родом из Чечни, Россия, но в данный момент проживаю в Белой Подляске, Польша. Я переехал в Польшу в 2017 году и до сих пор живу здесь, но планирую переезд в Москву или Санкт-Петербург в будущем.<br><br>В настоящее время я активно изучаю веб-разработку. Я также являюсь членом сообщества JVMFrog Live и владельцем проекта ByteFlipper.<br><br>Открытый исходный код — моя страсть, и уже более двух лет я вношу свой вклад в развитие проектов с открытым исходным кодом, публикуя свои приложения с открытым исходным кодом. Помимо технологий, меня интересует лингвистика, и в данный момент я активно изучаю английский язык. Я также увлекаюсь фотографией, дизайном пользовательского интерфейса и даже рисованием. Музыка — моя страсть, и мой день не проходит без хорошей музыки.",
-     "skills":"Навыки",
-     "skillsCards":{
-        "skill1":{
-           "title":"Разработка Android",
-           "description":"Java, Kotlin"
-        },
-        "skill2":{
-           "title":"Веб-разработка",
-           "description":"Vue3 + DaisyUI"
-        },
-        "skill3":{
-           "title":"Системы контроля версий",
-           "description":"Git, GitHub"
-        },
-        "skill4":{
-           "title":"Дизайн веб/приложений",
-           "description":"Прототипирование и UI/UX-дизайн"
-        }
-     }
-  },
-  "contactMe":{
-     "socialNetwork":"Мои социальные сети",
-     "form":{
-        "title":"Свяжитесь со мной",
-        "yourname":"Ваше имя",
-        "enteryourname":"Введите ваше имя",
-        "youremail":"Ваш email",
-        "enteryouremail":"Введите ваш email",
-        "message":"Сообщение",
-        "enteryourmessage":"Введите ваше сообщение",
-        "submit":"Отправить",
-        "sending":"Отправка..."
-     }
-  }
+        "minimalistUI": {
+            "title": "Удобный и минималистичный интерфейс",
+            "description": "Эстетичный, удобный и настраиваемый интерфейс без лишних элементов"
+        }        
+      }
+   },
+   "aboutMe":{
+      "description":"Я разработчик Android, который недавно начал работать в веб-разработке. Я родом из Чечни, Россия, но в данный момент проживаю в Белой Подляске, Польша. Я переехал в Польшу в 2017 году и до сих пор живу здесь, но планирую переезд в Москву или Санкт-Петербург в будущем.<br><br>В настоящее время я активно изучаю веб-разработку. Я также являюсь членом сообщества JVMFrog Live и владельцем проекта ByteFlipper.<br><br>Открытый исходный код — моя страсть, и уже более двух лет я вношу свой вклад в развитие проектов с открытым исходным кодом, публикуя свои приложения с открытым исходным кодом. Помимо технологий, меня интересует лингвистика, и в данный момент я активно изучаю английский язык. Я также увлекаюсь фотографией, дизайном пользовательского интерфейса и даже рисованием. Музыка — моя страсть, и мой день не проходит без хорошей музыки.",
+      "skills":"Навыки",
+      "skillsCards":{
+         "skill1":{
+            "title":"Разработка Android",
+            "description":"Java, Kotlin"
+         },
+         "skill2":{
+            "title":"Веб-разработка",
+            "description":"Vue3 + DaisyUI"
+         },
+         "skill3":{
+            "title":"Системы контроля версий",
+            "description":"Git, GitHub"
+         },
+         "skill4":{
+            "title":"Дизайн веб/приложений",
+            "description":"Прототипирование и UI/UX-дизайн"
+         }
+      }
+   },
+   "contactMe":{
+      "socialNetwork":"Мои социальные сети",
+      "form":{
+         "title":"Свяжитесь со мной",
+         "yourname":"Ваше имя",
+         "enteryourname":"Введите ваше имя",
+         "youremail":"Ваш email",
+         "enteryouremail":"Введите ваш email",
+         "message":"Сообщение",
+         "enteryourmessage":"Введите ваше сообщение",
+         "submit":"Отправить",
+         "sending":"Отправка..."
+      }
+   }
 }
