--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -27,6 +27,10 @@
        "ourAndroidApps":"Наші додатки для Android",
        "authorsMusic": "Музика Автора",
        "cards":{
+         "everbook": {
+            "title": "EverBook",
+            "description": "Зручний додаток для читання книг із підтримкою різних форматів."
+        },        
           "ffsettings":{
              "title":"Налаштування FF",
              "description":"Тут ви знайдете налаштування чутливості для гри Garena Free Fire для різних пристроїв."
@@ -73,6 +77,34 @@
           }
        }
     },
+    "everbook": {
+      "about": "",
+      "features": "Функції",
+      "screenshots": "Скріншоти",
+      "description": "Зручний додаток для читання книг, що дозволяє користувачам насолоджуватися улюбленими творами будь-коли та будь-де. Просто завантажте свої книги в додаток і читайте їх у комфортній, інтуїтивно зрозумілій читалці. Додаток автоматично запам'ятовує, де ви зупинилися, і при наступному вході відкриває книгу на тому ж місці. Підтримуються різні формати файлів, а також налаштування шрифтів і тем для вашої зручності.",
+      "featues": {
+          "supportedFileFormats": {
+              "title": "Підтримка 8 форматів файлів",
+              "description": "Підтримуються 8 різних форматів файлів, зокрема: .pdf, .txt, .epub, .fb2, .zip, .html, .htm та .md"
+          },
+          "customization": {
+              "title": "Повна кастомізація читалки",
+              "description": "Доступна кастомізація читалки: від розміру тексту і вибору шрифту до налаштувань кольорів тексту та фону"
+          },
+          "themes": {
+              "title": "10 унікальних тем",
+              "description": "На вибір 10 варіантів тем, включаючи AMOLED і контрастні варіанти"
+          },
+          "multilingualSupport": {
+              "title": "Багатомовна підтримка",
+              "description": "Підтримуються різні мови, нові додаються регулярно"
+          },
+          "minimalistUI": {
+              "title": "Зручний і мінімалістичний інтерфейс",
+              "description": "Естетичний, зручний і налаштовуваний інтерфейс без зайвих елементів"
+          }
+      }
+  },  
     "aboutMe":{
        "description":"Я розробник Android, який нещодавно почав працювати в веб-розробці. Я родом з Чечні, Росія, але наразі проживаю в Білій Подлясці, Польща. Я переїхав до Польщі в 2017 році і досі живу тут, але планую переїзд до Москви або Санкт-Петербурга в майбутньому.<br><br>Зараз я активно вивчаю веб-розробку. Я також є членом спільноти JVMFrog Live і власником проекту ByteFlipper.<br><br>Open source — це моя пристрасть, і вже більше двох років я сприяю розвитку проектів з відкритим кодом, публікуючи свої додатки з відкритим кодом. Окрім технологій, я цікавлюсь лінгвістикою і активно вивчаю англійську мову. Також захоплююсь фотографією, дизайном інтерфейсів користувача та малюванням. Музика — моя пристрасть, і жоден день не обходиться без гарної музики.",
        "skills":"Навички",
