--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -23,7 +23,7 @@
    },
    "home":{
       "welcomeMessage":"Привет!",
-      "description":"Мы вкладываем душу в проекты, которые создаём для вас ❤️<br>На этом сайте вы найдете наши приложения и разработки, выполненные с заботой и вниманием. Мы надеемся, что наша работа будет вам полезна.",
+      "description":"Мы вкладываем душу в проекты, которые создаём для вас ❤️<br>На этом сайте вы найдете наши приложения и разработки, выполненные с заботой и вниманием. Мы надеемся, что наши работы будут вам полезны.",
       "ourAndroidApps":"Наши Android приложения",
       "authorsMusic":"Музыка Автора",
       "cards":{
