--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -21,6 +21,9 @@
       "aboutMe":"About Me",
       "contactMe":"Contact Me"
    },
+   "greeting": {
+      "message": "Merry Christmas and Happy 2025 New Year!"
+    },
    "home":{
       "welcomeMessage":"Hi there!",
       "description":"We pour our hearts into the projects we create for you ❤️<br>On this site, you'll find our apps and developments, crafted with care and attention. We hope our work will be useful to you.",
