--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -21,6 +21,9 @@
       "aboutMe":"Обо мне",
       "contactMe":"Контакты"
    },
+   "greeting": {
+      "message": "С Рождеством и Новым 2025 годом!"
+    },
    "home":{
       "welcomeMessage":"Привет!",
       "description":"Мы вкладываем душу в проекты, которые создаём для вас ❤️<br>На этом сайте вы найдете наши приложения и разработки, выполненные с заботой и вниманием. Мы надеемся, что наши работы будут вам полезны.",
