--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -21,6 +21,9 @@
        "aboutMe":"Про мене",
        "contactMe":"Зв’язатися"
     },
+    "greeting": {
+      "message": "З Різдвом Христовим і Новим 2025 роком!"
+    },
     "home":{
        "welcomeMessage":"Привіт!",
        "description":"Ми вкладаємо серце в проекти, які створюємо для вас ❤️<br>На цьому сайті ви знайдете наші додатки та розробки, виконані з турботою та увагою. Ми сподіваємося, що наша робота буде для вас корисною.",
