--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -22,8 +22,8 @@
       "contactMe":"Contact Me"
    },
    "greeting": {
-      "message": "Merry Christmas and Happy 2025 New Year!"
-    },
+      "message": "Happy New Year 2025!🎉\nMay this year bring you an ocean of joy, strong health, and all your dreams coming true. Wishing you smiles, warmth, and inspiration every day! ✨"
+   },
    "home":{
       "welcomeMessage":"Hi there!",
       "description":"We pour our hearts into the projects we create for you ❤️<br>On this site, you'll find our apps and developments, crafted with care and attention. We hope our work will be useful to you.",
