--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -22,8 +22,8 @@
        "contactMe":"Skontaktuj się"
     },
     "greeting": {
-      "message":"Wesołych Świąt i Szczęśliwego Nowego 2025 Roku!"
-    },
+      "message": "Szczęśliwego Nowego Roku 2025!🎉\nNiech ten rok przyniesie morze radości, dużo zdrowia i spełnienie wszystkich marzeń. Uśmiechów, ciepła i inspiracji na każdy dzień! ✨"    
+   },
     "home":{
        "welcomeMessage":"Witaj!",
        "description":"Wkładamy serce w projekty, które tworzymy dla Ciebie ❤️<br>Na tej stronie znajdziesz nasze aplikacje i rozwinięcia, wykonane z troską i uwagą. Mamy nadzieję, że nasza praca będzie dla Ciebie przydatna.",
