--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -22,8 +22,8 @@
        "contactMe":"Зв’язатися"
     },
     "greeting": {
-      "message": "З Різдвом Христовим і Новим 2025 роком!"
-    },
+      "message": "З Новим 2025 роком!🎉\nНехай цей рік принесе море радості, міцного здоров'я та здійснення всіх мрій. Усмішок, тепла та натхнення кожного дня! ✨"
+   },
     "home":{
        "welcomeMessage":"Привіт!",
        "description":"Ми вкладаємо серце в проекти, які створюємо для вас ❤️<br>На цьому сайті ви знайдете наші додатки та розробки, виконані з турботою та увагою. Ми сподіваємося, що наша робота буде для вас корисною.",
