--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -22,7 +22,7 @@
       "contactMe":"Контакты"
    },
    "greeting": {
-      "message": "С Рождеством и Новым 2025 годом!"
+      "message": "С Новым 2025 годом!🎉\nПусть этот год принесёт море радости, крепкого здоровья и исполнения всех желаний. Улыбок, тепла и вдохновения на каждый день! ✨"
     },
    "home":{
       "welcomeMessage":"Привет!",
